2008-10-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Don't use vi mode on default
	constructor.

	* Makefile.am:
	* Mono.TextEditor.mdp: Updated.

	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor.Vi/ViActions.cs:
	* Mono.TextEditor.Vi/ViActionMaps.cs: Move vi code to new namespace.
	Move action lookup out of the way. Implement 'o' and 'O', and
	:{number}. Unbreak 'c' key and ':' commands by removing overzealous
	modifier check.

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/ViActions.cs: Moved.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViActions.cs: Fix { } behaviour.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.TextEditor.mdp: Updated.

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/ViActions.cs: Implemented { and }.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs:
	* Mono.TextEditor/DeleteActions.cs: Implemented 'dd' and 'd{motion}' for
	simple motions.

2008-10-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs: Refactor the dictionaries into switches to
	reduce overhead (also more readable for character commands). Split
	cursor and character navigation keys so that cursor keys can work in
	insert mode.

	* Mono.TextEditor/SelectionActions.cs: Add method for converting a
	movement action to a selection action.

2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ViMode.cs: Add support for simple vi commands.

2008-10-10  Christian Hergert  <chris@dronelabs.com>

	* SyntaxModes/PythonSyntaxMode.xml: Python does not support multiline
	comments.
	* SyntaxModes/CSyntaxMode.xml: Add NULL as a literal keyword.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/CaretMoveActions.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs: fixed 'Bug 434165 - Page UP/Down