@@ -94,7 +94,6 @@
     <File name="Mono.TextEditor/DeleteActions.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor/ClipboardActions.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor/BookmarkActions.cs" subtype="Code" buildaction="Compile" />
-    <File name="Mono.TextEditor.Vi" subtype="Directory" buildaction="Compile" />
     <File name="Mono.TextEditor.Vi/ViMode.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor.Vi/ViActions.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.TextEditor.Vi/ViActionMaps.cs" subtype="Code" buildaction="Compile" />
@@ -109,6 +108,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="glib-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </References>
   <GtkDesignInfo />
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../..">
